--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
     "@mantine/notifications": "^8.0.1",
     "@mantine/spotlight": "^8.0.1",
     "@nanostores/react": "^1.0.0",
-    "@supabase/supabase-js": "^2.49.6",
-    "@tabler/icons-react": "^3.33.0",
+    "@supabase/supabase-js": "^2.46.1",
+    "@tabler/icons-react": "^3.35.0",
+    "@vitejs/plugin-react": "^5.1.0",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.548.0",
     "match-sorter": "^8.0.1",
     "nanostores": "^1.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
-    "sort-by": "^1.2.0",
+    "recharts": "^3.3.0",
+    "sort-by": "^0.0.2",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -35,6 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react-swc": "^3.9.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.27.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
