--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,14 @@
     "noEmit": true,
     "jsx": "react-jsx",
 
+    /* Aliases de importação */
+    "baseUrl": "src",
+    "paths": {
+      "@global/*": ["global-state/*"],
+      "@components/*": ["components/*"],
+      "@views/*": ["views/*"]
+    },
+
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
