--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.46.1",
     "@tabler/icons-react": "^3.35.0",
     "@vitejs/plugin-react": "^5.1.0",
+    "framer-motion": "^12.23.24",
     "localforage": "^1.10.0",
     "lucide-react": "^0.548.0",
     "match-sorter": "^8.0.1",
