--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,24 +5,20 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
-
-    /* Bundler mode */
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-
-    /* Aliases de importação */
     "baseUrl": "src",
     "paths": {
       "@global/*": ["global-state/*"],
       "@components/*": ["components/*"],
-      "@views/*": ["views/*"]
+      "@views/*": ["views/*"],
+      "@services/*": ["services/*"],
+      "@supabase/*": ["supabase/*"]
     },
-
-    /* Linting */
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
